--- a/pmdm/AndroidStudioProjects/GelateriaMaltesa/app/src/main/res/values/strings.xml
+++ b/pmdm/AndroidStudioProjects/GelateriaMaltesa/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">GelateriaMaltesa</string>
+    <string-array name="spType">
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+    </string-array>
 </resources>
